# fit2gpx-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: check-build.yml  ci-cd.yml  release.yml  rust.yml  text.yml
src/: elevation.rs  fit.rs  lib.rs  main.rs  utils.rs
