[package]
name = "fit2gpx"
version = "0.6.1"
edition = "2024"

authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
description = ".fit to .gpx converter"
keywords = ["garmin", "fit", "cli", "gpx"]
categories = ["command-line-interface", "science::geo"]
repository = "https://github.com/jarjk/fit2gpx-rs"
license = "MIT"
exclude = ["*.fit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"], default-features = false }
fit_file = "0.6.0"
geo-types = "0.7.17"
gpx = "0.10.0"
log = "0.4.28"
rayon = "1.11.0"
srtm_reader = { version = "0.5.1", optional = true }
time = { version = "0.3.44", default-features = false }

[features]
default = ["elevation"]
elevation = ["dep:srtm_reader"]

[profile.release]
strip = true
lto = true
codegen-units = 1
# panic = "abort"
